# FPL

./: .gitignore  TODO.md  pyproject.toml
adhoc/player_name/: Player Name mapping.xlsx  align_fpl_player_name.py  fbref2fpl_player_overrides.yml  fuzzy_match_player_names.py
adhoc/team_name/: align_fpl_team_name.py  season_team_id.csv
chromedriver/: download-chromedriver.md
conf/base/: catalog.yml  logging.yml
data/: Fantasy Overlord - Fantasy Premier League - History.url
data/backtest_data/: download here.url
data/optimization/: picks.csv
data/preprocess/: Player Name mapping.xlsx  fbref2fpl_player_mapping.yml  fbref2fpl_player_overrides.yml  feature_selection_summary.csv  old2new_fpl_player_mapping.yml  player_name_mapping.csv
data/preprocessing/: fpl2fbref_team_mapping.yml
docs/: fbref_glossary.md
fpl/: .gitignore  README.md  fplmodel.sol  pyproject.toml
fpl/data/: Player Name mapping.xlsx  fuzzy_match_overrides.yml  player_name_mapping.csv  player_name_mapping.xls
fpl/docs/: feature_selection.md
fpl/models/: player_name_mapping.csv
model/: model.ipynb
notebooks/: check_data.ipynb  check_name_mapping.ipynb  chips_suggestion.ipynb  data.ipynb  debug_lp.ipynb  design.md  error_analysis.ipynb  model.ipynb  name_mapping_check.ipynb
optimization/: fplmodel.sol  optimizer.ipynb  optimizer.py  picks.csv  summary.txt
scraper/: BaseDriver.py  Links.md  OddsPortalDriver.py  create_player_match_log.sql  create_team_match_log.sql  init_db.py  scraper.ipynb  scraper.py  sqlite.ipynb
src/: requirements.txt  setup.py
tmp/: backup.ipynb
(+203 files in other folders)
