[project]
name = "fpl"
version = "0.1.0"
description = "FPL prediction and optimizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.0",
    "deepdiff>=8.1.1",
    "flatten-dict>=0.4.2",
    "hyperopt>=0.2.7",
    "ipykernel>=6.29.5",
    "kedro>=0.18.8",
    "kedro-datasets==1.2.0",
    "llvmlite>=0.43.0",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "numba>=0.60.0",
    "pandas<2.0",
    "paramiko>=3.5.0",
    "pulp>=2.9.0",
    "pycaret>=2.2.2",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "scikit-learn<1.3.0",
    "seaborn>=0.13.2",
    "sqlalchemy<2.0",
    "tenacity>=9.0.0",
    "thefuzz>=0.22.1",
    "webdriver-manager>=4.0.2",
    "xgboost>=1.7.1",
    "scipy<1.12",
    "selenium>=4.27.1",
    "selenium-stealth>=1.0.6",
]

[tool.kedro]
package_name = "fpl"
project_name = "fpl"
kedro_init_version = "0.18.7"
